--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.14.1",
     "@pagopa/mui-italia": "^1.1.0",
-    "@pagopa/selfcare-common-frontend": "^1.34.39",
+    "@pagopa/selfcare-common-frontend": "^1.34.45",
     "@types/node": "^12.20.19",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -23,7 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router": "^5.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.1.2",
     "util": "^0.12.5",
     "web-vitals": "^1.0.1"
@@ -74,6 +74,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "prettier": "^2.4.1"
+  },
+  "resolutions": {
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
