--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@mui/material": "^5.14.1",
     "@pagopa/mui-italia": "^1.1.0",
     "@pagopa/selfcare-common-frontend": "^1.34.45",
-    "@types/node": "^12.20.19",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "env-var": "^7.1.1",
     "i18next": "^23.7.11",
     "react": "^18.2.0",
@@ -57,12 +54,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/history": "^4.7.9",
     "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router": "^5.1.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
