--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.14.1",
     "@pagopa/mui-italia": "^1.1.0",
-    "@pagopa/selfcare-common-frontend": "^1.34.39",
-    "@types/node": "^12.20.19",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@pagopa/selfcare-common-frontend": "^1.34.45",
     "env-var": "^7.1.1",
     "i18next": "^23.7.11",
     "react": "^18.2.0",
@@ -23,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router": "^5.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.1.2",
     "util": "^0.12.5",
     "web-vitals": "^1.0.1"
@@ -57,12 +54,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/history": "^4.7.9",
     "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router": "^5.1.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -74,6 +76,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "prettier": "^2.4.1"
+  },
+  "resolutions": {
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
